# toguzAI

./: .gitignore  feature_transformer.py  feature_transformer_slice_backward.py  feature_transformer_slice_forward.py  main.py  model.py  requirements.txt
dataset_generation/: CONSTANTS.py  create_features.py  dataset.py  get_sigma.py  main.py  rotate_dataset.py  start_hetero_porn.bat  start_main_py.bat  to_wdl_space.py
game_logic/: CMakeLists.txt  CONSTANTS.h  main.py  rebuild.bat  setup.py  toguz.cp312-win_amd64.pyd  toguz.h  toguz.pyi  toguz_board_wrapper.cpp
game_logic/toguz.egg-info/: PKG-INFO
simple_nnue/: accumulator.py  batch.py  clipped_relu.py  linear.py  model.py
tests/: performance.py
